--- a/index.html
+++ b/index.html
@@ -280,14 +280,14 @@
         <h2>Let’s <span>Get in Touch</span> !</h2>
         <div class="form">
             <div class="inputflex">
-                <input type="text" placeholder="Name" id="name">
-                <input type="text" placeholder="E-mail" id="mail">
+                <input type="text" placeholder="Name" id="name" required>
+                <input type="text" placeholder="E-mail" id="mail" required>
             </div>
             <div class="inputflex">
-                <input type="text" placeholder="Phone Number" id="phnumber">
-                <input type="text" placeholder="Subject" id="Subject">
+                <input type="text" placeholder="Phone Number" id="phnumber" required>
+                <input type="text" placeholder="Subject" id="Subject" required>
             </div>
-            <textarea placeholder="Message" id="message"></textarea>
+            <textarea placeholder="Message" id="message" required></textarea> 
         </div>
         <div class="buttonflex">
             <button class="btn1"><a href="./images/resume.png">View CV</a></button>
@@ -326,7 +326,7 @@
                 message:document.getElementById("message").value,
             }
             emailjs.send("service_u61k6ec","template_314wuip",datas).then(()=>{
-                alert("Thankyou for contacting us. we will call you shortly.")
+                alert("Thank You for checking out my profile")
             })
         })
       </script>
