--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="cv">
-            <a href="./images/resume.png"><img src="./images/cv.png" alt=""></a>
+            <a href="./images/Dravid Resume.pdf"><img src="./images/cv.png" alt=""></a>
         </div>
        </div>
         <div>
@@ -290,7 +290,7 @@
             <textarea placeholder="Message" id="message" required></textarea> 
         </div>
         <div class="buttonflex">
-            <button class="btn1"><a href="./images/resume.png">View CV</a></button>
+            <button class="btn1"><a href="./images/Dravid Resume.pdf">View CV</a></button>
             <button class="btn2" type="submit" id="mailsend">Send<i class="uil uil-message"></i></i></button>
         </div>
     </section>
